<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="detail"
                type="com.aryansa.rizqi.moviejetpack.model.MovieDetailResponse"/>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/scene_header"
            tools:showPaths="true"
            tools:context=".view.activity.DetailActivity">

        <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/toolbar_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/contentDetail"
                android:scaleType="fitCenter"
                app:setImageUrl="@{detail.posterPath}"
                tools:src="@drawable/img_placeholder_img"
                android:background="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@android:id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_16dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingTop="@dimen/_16dp"
                android:paddingBottom="@dimen/_16dp"
                android:src="@drawable/abc_ic_ab_back_material"
                android:tint="?android:attr/textColorPrimaryInverse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginBottom="24dp"
                android:text="@{detail.getTitleMovie()}"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/toolbar_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/_8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contentDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar_image">

            <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:numStars="5"
                    android:isIndicator="true"
                    app:setRating="@{safeUnbox(detail.getRatingVote())}"
                    app:layout_constraintBottom_toTopOf="@id/overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintTop_toBottomOf="@id/ratingStar"
                    app:layout_constraintBottom_toTopOf="@+id/overviewDetail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/overview"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/overviewDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:text='@{detail.overview}'
                    app:layout_constraintTop_toBottomOf="@+id/overview"
                    app:layout_constraintBottom_toTopOf="@+id/releaseDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/example_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/releaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintBottom_toTopOf="@+id/releaseDateDetail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/release_date"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/releaseDateDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:text="@{detail.getYearMovie()}"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/example_year"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDateDetail"
                    app:layout_constraintBottom_toTopOf="@+id/rvGenre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/genre"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/genre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:listitem="@layout/item_genre"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>